--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+
+  /* addition/s */  
+  text-align: center;
 }
 
 img {
@@ -10,6 +13,9 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  
+  /* addition/s */
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -23,4 +29,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+
+/* addition/s */
+.container {
+	display: flex;
+	justify-content: center;
+	gap: 52px;
+}
+
+.info {
+	max-width: 200px;
+
+/* **not needed**
+	display: flex;
+	flex-wrap: wrap; */
 }
