--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  
+  /* addition/s */
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -25,3 +29,64 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* additions */
+a {
+	text-decoration: none;
+	color: #666;
+}
+
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	gap: 16px;
+	display: flex;
+}
+
+.header, .footer {
+	display: flex;
+	justify-content: space-between;
+	padding: 16px;
+}
+
+.footer {
+	background: #eee;
+}
+
+.content {
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.buttons button {
+	padding: 8px 16px;
+	font-weight: bold;
+}
+
+/* *unnecessary*
+.header {
+	position: fixed;
+	top: 0;
+	right: 0;
+	left: 0;
+	height: 52px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	height: 52px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	background: #eeeeee;
+}
+*/
