--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,27 +2,88 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  
+  /* addition/s */
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  
+  /* addition/s */
+  font-size: 32px;
+  font-weight: 900;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  
+  /* addition/s */
+  
+  /* *unnecessary*  
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
+  
+  /* addition/s */
+  padding: 16px;
+  flex-shrink: 0;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  
+  /* addition/s */
+  width: 300px;
+  margin: 16px;
+  padding: 16px;
+}
+
+/* selector additions */
+.body {
+	flex: 1;
+	display: flex;
+}
+
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+li {
+	margin-bottom: 16px;
+}
+
+a {
+	text-decoration: none;
+	color: white;
+	font-size: 24px;
+
+}
+
+.container {
+	padding: 32px;
+	display: flex;
+	flex-wrap: wrap;
 }
